# Sabry_Qubits

./: CHANGELOG.md  LICENSE  QbitsHaskell.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Gates.hs
src/Algorithms/: Adder.hs  BB84.hs  Deutsch.hs  Teleport.hs
src/Algorithms/BB84/: BB84.hs
src/Quantum/: Basis.hs  Operators.hs  PA.hs  Value.hs
src/Reference/: Observation.hs  Reference.hs
src/Virtual/: Adaptor.hs  Value.hs
