cabal-version:      3.0
name:               QbitsHaskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Fleivio
maintainer:         flavioborinjunior@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable QbitsHaskell
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        Quantum.Basis
        , Quantum.PA

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1

    -- Directories containing source files.
    hs-source-dirs:   app, src

    -- Base language which the package is written in.
    default-language: Haskell2010
