cabal-version:      3.0
name:               QbitsHaskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Fleivio
maintainer:         flavioborinjunior@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable QbitsHaskell
    import:           warnings

    main-is:          Main.hs

    other-modules: 
        Quantum.Basis
        , Quantum.PA
        , Quantum.Value
        , Quantum.Operators
        , Reference.Observation
        , Reference.Reference
        , Virtual.Value
        , Virtual.Adaptor
        , Gates
        , Algorithms.Teleport

    -- other-extensions:

    build-depends:    
        base ^>=4.19.1.0
        , containers
        , random

    hs-source-dirs:   app, src

    default-language: Haskell2010
